Update API and server
